[package]
name = "cry_1"
version = "0.1.0"
edition = "2021"
authors = ["Nicholas Stienz <nickstienz@gmail.com>"]
license = "MIT"
description = "An assembler for the Cry-1 Computer"
repository = "https://github.com/nickstienz/cry_1"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
